test/1.4/errors/T_ECONDINEACH.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

template x { }

port p {
    #if (false) {
        /// ERROR ECONDINEACH
        in each x {}
    }
}

#if (false) {
    // 'in each' inside conditional object is OK
    port q {
        in each x {}
    }
}

/// WARNING WEXPERIMENTAL
#if (false && true && dml_1_2) {
    // Experimental support for complex top-level conditionals allows in-each
    // to be used
    in each x {}
}
